syntax = "proto3";

package com.hammadltd.configservice.grpc;

message configRequest {
    repeated string neededConfigs = 1;
    string secretKey = 2;
}

message configResponse {
    string message = 1;
    int32 responseCode = 2;
}

service ConfigService {
    rpc GetConfigs (configRequest) returns (configResponse);
}